--- a/frontend/scss/components/form-wrapper.scss
+++ b/frontend/scss/components/form-wrapper.scss
@@ -20,6 +20,8 @@
     }
   }
   & .form {
+    position: relative;
+    z-index: 1;
     display: flex;
     margin-top: 48px;
     &__comment {
